Thu Nov 11 00:11:52 2010                        Michael Jennings (mej)

Object documentation improvements and reformatting.
----------------------------------------------------------------------
Thu Nov 11 00:27:41 2010                        Michael Jennings (mej)

More touchups and documentation.
----------------------------------------------------------------------
Wed Dec  8 16:04:27 2010                        Michael Jennings (mej)

Make serialize() and unserialize() proper methods.
----------------------------------------------------------------------
Wed Dec  8 18:02:54 2010                        Michael Jennings (mej)

Minor cleanups.
----------------------------------------------------------------------
Tue Dec 14 20:37:29 2010                        Michael Jennings (mej)

Support get/set for array-based (multi-value) members.
----------------------------------------------------------------------
Tue Dec 14 22:27:26 2010                        Michael Jennings (mej)

Working on fixing ObjectSet initialization with object hashes.
----------------------------------------------------------------------
Tue Dec 14 22:51:50 2010                        Michael Jennings (mej)

add() and del() forceably use arrays now.  set("foo", undef) or
del("foo") will delete a member entirely.
----------------------------------------------------------------------
Wed Dec 15 00:42:11 2010                        Michael Jennings (mej)

Make sure array elements are unique when doing add().

Delete key if del() removes last array element.
----------------------------------------------------------------------
Wed Dec 15 00:47:09 2010                        Michael Jennings (mej)

set() for an array now deletes and add()s.
----------------------------------------------------------------------
Thu Dec 16 11:10:26 2010                        Michael Jennings (mej)

Use list address for configure.in.
----------------------------------------------------------------------